[tool.poetry]
name = "mytoolbox"
version = "0.1.0"
description = ""
authors = ["Gabriel Dornas <gabrielbdornas@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
unidecode = "^1.3.6"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry.scripts]
snake-small-case =  'mytoolbox.normalize_table_columns:snake_small_case'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]

[tool.taskipy.tasks]
blue = { cmd = "blue .", help = "Format code style with blue." }
blue-check = { cmd = "blue --check --diff .", help = "Check code style with blue." }
isort = { cmd = "isort .", help = "Format code imports with isort." }
isort-check = { cmd = "isort --check --diff .", help = "Check code imports with isort." }